apps/health/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: health
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 80
      targetPort: http
